Make li & append to HTML

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel='stylesheet' href='css/styles.css'
+    <title>Gallery</title>
+    <link rel='stylesheet' href='css/styles.css'>
+    
 </head>
 <body>
 <!-- В этот список добавляй элементы галереи -->
@@ -24,6 +25,7 @@
     <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
 </div>
 
-<script src="gallery-items.js" type="module"></script>
+<script src="./js/gallery-items.js" type="module"></script>
+<script src="./js/task-1.js" type="module"></script>
 </body>
 </html>
